2010-01-14  Eric Seidel  <eric@webkit.org>

        No review, rolling out r53249.
        http://trac.webkit.org/changeset/53249
        https://bugs.webkit.org/show_bug.cgi?id=33617

        This caused http/tests/security/local-user-CSS-from-
        remote.html to fail on the Qt Release Build Bot.

        * platform/qt/Skipped:

2010-01-14  Eric Seidel  <eric@webkit.org>

        No review, rolling out r53248.
        http://trac.webkit.org/changeset/53248
        https://bugs.webkit.org/show_bug.cgi?id=32641

        Caused 2 tests to crash on various bots:
        fast/dom/HTMLSelectElement/listbox-select-reset.html and
        fast/forms/listbox-typeahead-scroll.html

        * fast/forms/HTMLOptionElement_selected-expected.txt:
        * fast/forms/HTMLOptionElement_selected.html:
        * fast/forms/HTMLOptionElement_selected2-expected.txt: Removed.
        * fast/forms/HTMLOptionElement_selected2.html: Removed.
        * fast/forms/HTMLOptionElement_selected3-expected.txt: Removed.
        * fast/forms/HTMLOptionElement_selected3.html: Removed.
        * fast/forms/add-remove-option-modification-event-expected.txt:

2010-01-14  Ben Murdoch  <benm@google.com>

        Reviewed by Darin Adler.

        [Android] [Qt] The document.createEvent API does not support touch events.
        https://bugs.webkit.org/show_bug.cgi?id=33605

        * fast/events/script-tests/create-touch-event.js: Added. Ensures that document.createEvent("TouchEvent") can create a TouchEvent.
        * fast/events/touch/create-touch-event-expected.txt: Added.
        * fast/events/touch/create-touch-event.html: Added.

2010-01-14  Diego Gonzalez  <diego.gonzalez@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT missing setUserStyleSheetLocation and setUserStyleSheetEnabled in LayoutTestController
        https://bugs.webkit.org/show_bug.cgi?id=33617

        * platform/qt/Skipped:

2010-01-14  James Robinson  <jamesr@chromium.org>
