@@ -5745,6 +5745,3 @@ fast/profiler/dead-time.html
 
 # Fails on and off (more often fails) on the release bot
 media/event-attributes.html
-
-# Fails on release bot, see https://bugs.webkit.org/show_bug.cgi?id=33015
-media/video-seek-past-end-playing.html
